--- a/package.json
+++ b/package.json
@@ -14,19 +14,37 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.52",
+    "@langchain/community": "^1.0.0",
     "@prisma/client": "^6.17.1",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "@sentry/nextjs": "^10.20.0",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
+    "@vercel/og": "^0.8.5",
     "@vercel/postgres": "^0.10.0",
+    "ai": "^5.0.76",
     "bcryptjs": "^3.0.2",
+    "chalk": "^5.6.2",
+    "commander": "^14.0.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "inquirer": "^12.10.0",
+    "langchain": "^1.0.1",
     "next": "15.5.5",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.12",
+    "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-intersection-observer": "^9.16.0",
-    "three": "^0.180.0"
+    "recharts": "^3.3.0",
+    "sharp": "^0.34.4",
+    "swr": "^2.3.6",
+    "three": "^0.180.0",
+    "workbox-webpack-plugin": "^7.3.0",
+    "zod-to-json-schema": "^3.24.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
